# PiTCT-docs

./: .gitignore  README.md  jupyter_lite_config.json  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml
docs/: .nav.yml  index.md
docs/getting_started/: basic_sample.md  installation.md
docs/migration/: v0_to_v1.md
docs/reference/: allevents.md  automaton_display.md  blocking _states.md  complement.md  conact.md  condat.md  create.md  display_automaton.md  events.md  init.md  is_controllable.md  is_coreachable.md  is_nonblocking.md  is_reachable.md  is_trim.md  isomorph.md  localize.md  marker.md  meet.md  mutex.md  printdat.md  reachable_string.md  sample_automaton.md  selfloop.md  shortest_string.md  simulate_automaton.md  statenum.md  subautomaton.md  supcon.md  supreduce.md  sync.md  template.md  trans.md  transnum.md  trim.md  uncontrollable_states.md
jupyterlite/: README.md  jupyter_lite_config.json
jupyterlite/lab/: jupyter-lite.json
jupyterlite/notebooks/: 0_readme.ipynb  1_basic_operation.ipynb  2_supervisory_control_computation.ipynb  simple_usage.ipynb
jupyterlite/patch/: load_graphviz.py
notebooks/: transfer_line.ipynb
patch/: load_graphviz.py
