[project]
name = "pitct-docs"
version = "0.1.0"
description = "PiTCT Documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-material>=9.7.1",
]

[dependency-groups]
jupyter = [
    "jupyterlab>=4.5.1",
    "jupyterlite-core==0.7.1",
    "jupyterlite-pyodide-kernel==0.7.0",
]
